force-app/main/default/objects/WGB_Flow_Rate__c/WGB_Flow_Rate__c.object-meta.xml
<CustomObject>
    <label>WGB Flow Rate</label>
    <nameField>
        <label>WGB Flow Rate</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WGB Flow Rate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>