force-app/main/default/objects/WGB_Flow_Rate__c/fields/GTAG01__c.field-meta.xml
<CustomField>
    <fullName>GTAG01__c</fullName>
    <label>GTAG01</label>
    <length>255</length>
    <type>Text</type>
</CustomField>