force-app/main/default/objects/WGB_Flow_Rate__c/fields/MAX_FLOWRATE__c.field-meta.xml
<CustomField>
    <fullName>MAX_FLOWRATE__c</fullName>
    <label>MAX_FLOWRATE</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>