force-app/main/default/objects/WGB_Flow_Rate__c/fields/OA05__c.field-meta.xml
<CustomField>
    <fullName>OA05__c</fullName>
    <label>OA05</label>
    <length>255</length>
    <type>Text</type>
</CustomField>