force-app/main/default/objects/WGB_Flow_Rate__c/fields/PEDCON__c.field-meta.xml
<CustomField>
    <fullName>PEDCON__c</fullName>
    <label>PEDCON</label>
    <length>255</length>
    <type>Text</type>
</CustomField>