force-app/main/default/objects/WGB_Flow_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Model__c</columns>
    <columns>SizeCode__c</columns>
    <columns>PEDCON__c</columns>
    <columns>MIN_FLOWRATE__c</columns>
    <columns>MAX_FLOWRATE__c</columns>
    <columns>FLOW_UNITS__c</columns>
    <columns>OA05__c</columns>
    <columns>GTAG01__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>